--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
                     <input type="text" class="form-control form-control-lg" placeholder="Enter State or abbreviation" id="search">
                 </div>
                 <div id="match-list">
-                    
+
                 </div>
             </div>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
